Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3331316001689042"
           crossorigin="anonymous"></script>
     <meta name="description" content="מחולל כרטיסי בינגו מותאם אישית בחינם (FREE). צרו כרטיסי בינגו מספרים או ריקים בכל גודל (3x3, 4x4, 5x5), עם טווח מספרים לבחירתכם, וכותרות עמודות מותאמות אישית. קל ונוח להדפסה כ-PDF.">
-    <meta name="description" lang="en" content="Free custom Bingo card generator (FREE). Create numbered or blank bingo cards in any size (3x3, 4x4, 5x5) with adjustable number range and custom column titles. Easy to print as PDF.">
+    <meta name="description" lang="en" content="Free custom Bingo card generator. Create numbered or blank bingo cards in any size (3x3, 4x4, 5x5) with adjustable number range and custom column titles. Easy to print as PDF.">
     
     <meta name="keywords" content="מחולל בינגו חינם, כרטיסי בינגו להדפסה, יצירת בינגו מספרים, בינגו ריק להדפסה, בינגו 5x5, מחולל כרטיסים, custom bingo generator free">
     <meta name="keywords" lang="en" content="free bingo card generator, custom bingo maker, printable bingo cards, number bingo, blank bingo cards, bingo 5x5, custom column titles, free bingo game">
