--- a/index.html
+++ b/index.html
@@ -26,9 +26,33 @@
             letter-spacing: -1px;
         }
         
+        /* Navigation Styles - Optimized for Mobile fitting */
         .nav-links { display: flex; gap: 0.8rem; overflow-x: auto; white-space: nowrap; }
         .nav-link { color: #4b5563; transition: color 0.2s; font-weight: 400; font-size: 0.9rem; border: none; background: none; cursor: pointer; padding: 0.5rem; }
         .nav-link.active { color: #1d4ed8; font-weight: 700; }
+
+        /* Mobile adjustments to fit all tabs in one screen without scrolling */
+        @media (max-width: 640px) {
+            .nav-links { 
+                gap: 0.1rem; /* Minimal gap */
+                overflow-x: hidden; /* Prevent scroll */
+                width: 100%;
+                justify-content: space-between;
+            }
+            .nav-link { 
+                padding: 0.4rem 0.2rem; /* Reduce padding */
+                font-size: 0.8rem; /* Slightly smaller text */
+            }
+            #lang-button {
+                font-size: 0.75rem; /* Smaller lang button */
+                padding: 2px 6px;
+                margin-left: 0.2rem !important;
+            }
+            .nav-container {
+                padding-left: 0.5rem !important; 
+                padding-right: 0.5rem !important;
+            }
+        }
         
         #output-container { display: grid; grid-template-columns: 1fr; gap: 24px; width: 100%; justify-items: center; }
         @media (min-width: 1024px) { #output-container { grid-template-columns: repeat(2, 1fr); } }
@@ -150,7 +174,7 @@
 <body>
 
     <nav class="bg-white shadow-sm no-print mb-4 sticky top-0 z-50">
-        <div class="max-w-7xl mx-auto px-4 flex justify-between items-center h-16">
+        <div class="nav-container max-w-7xl mx-auto px-4 flex justify-between items-center h-16">
             <div class="nav-links">
                 <button onclick="showSection('main')" id="nav-main" class="nav-link active" data-i18n="navHome">בית</button>
                 <button onclick="showSection('guide')" id="nav-guide" class="nav-link" data-i18n="navGuide">מדריך</button>
