--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@
             letter-spacing: -1px;
         }
         
-        /* Navigation Styles - Optimized for Mobile fitting */
+        /* Navigation Styles */
         .nav-links { display: flex; gap: 0.8rem; overflow-x: auto; white-space: nowrap; }
-        .nav-link { color: #4b5563; transition: color 0.2s; font-weight: 400; font-size: 0.9rem; border: none; background: none; cursor: pointer; padding: 0.5rem; }
+        .nav-link { color: #4b5563; transition: color 0.2s; font-weight: 400; font-size: 0.95rem; border: none; background: none; cursor: pointer; padding: 0.5rem; }
         .nav-link.active { color: #1d4ed8; font-weight: 700; }
 
-        /* Mobile adjustments to fit all tabs in one screen without scrolling */
+        /* Mobile adjustments: Readable font, tighter spacing, no scroll */
         @media (max-width: 640px) {
+            .nav-container {
+                padding-left: 4px !important;
+                padding-right: 4px !important;
+            }
             .nav-links { 
-                gap: 0.1rem; /* Minimal gap */
-                overflow-x: hidden; /* Prevent scroll */
+                gap: 2px; /* Very small gap */
+                overflow-x: hidden; 
                 width: 100%;
-                justify-content: space-between;
+                justify-content: space-between; /* Spread evenly */
             }
             .nav-link { 
-                padding: 0.4rem 0.2rem; /* Reduce padding */
-                font-size: 0.8rem; /* Slightly smaller text */
+                padding: 0.5rem 2px; /* Minimal side padding */
+                font-size: 0.9rem; /* Restored to readable size */
             }
             #lang-button {
-                font-size: 0.75rem; /* Smaller lang button */
-                padding: 2px 6px;
-                margin-left: 0.2rem !important;
-            }
-            .nav-container {
-                padding-left: 0.5rem !important; 
-                padding-right: 0.5rem !important;
+                font-size: 0.8rem;
+                padding: 2px 4px;
+                margin-left: 2px !important;
             }
         }
         
