--- a/index.html
+++ b/index.html
@@ -31,26 +31,29 @@
         .nav-link { color: #4b5563; transition: color 0.2s; font-weight: 400; font-size: 0.95rem; border: none; background: none; cursor: pointer; padding: 0.5rem; }
         .nav-link.active { color: #1d4ed8; font-weight: 700; }
 
-        /* Mobile adjustments: Readable font, tighter spacing, no scroll */
+        /* Mobile adjustments: Tighter nav, specific gap for lang button */
         @media (max-width: 640px) {
             .nav-container {
-                padding-left: 4px !important;
-                padding-right: 4px !important;
+                padding-left: 2px !important;
+                padding-right: 2px !important;
             }
             .nav-links { 
-                gap: 2px; /* Very small gap */
+                gap: 0px; /* No gap between items */
+                width: auto;
+                flex: 1; /* Take available space */
+                justify-content: space-between; /* Spread items evenly */
                 overflow-x: hidden; 
-                width: 100%;
-                justify-content: space-between; /* Spread evenly */
             }
             .nav-link { 
-                padding: 0.5rem 2px; /* Minimal side padding */
-                font-size: 0.9rem; /* Restored to readable size */
+                padding: 0; /* Remove side padding to tighten */
+                font-size: 0.9rem; /* Keep readable size */
             }
             #lang-button {
-                font-size: 0.8rem;
-                padding: 2px 4px;
-                margin-left: 2px !important;
+                font-size: 0.75rem;
+                padding: 2px 6px;
+                margin-inline-start: 12px !important; /* Force gap between nav and button */
+                flex-shrink: 0;
+                margin-left: 0; 
             }
         }
         
