--- a/index.html
+++ b/index.html
@@ -31,27 +31,28 @@
         .nav-link { color: #4b5563; transition: color 0.2s; font-weight: 400; font-size: 0.95rem; border: none; background: none; cursor: pointer; padding: 0.5rem; }
         .nav-link.active { color: #1d4ed8; font-weight: 700; }
 
-        /* Mobile adjustments: Tighter nav, specific gap for lang button */
+        /* Mobile adjustments: Fixes for spacing and gaps */
         @media (max-width: 640px) {
             .nav-container {
-                padding-left: 2px !important;
-                padding-right: 2px !important;
+                padding-left: 16px !important; /* Space from left edge */
+                padding-right: 16px !important; /* Space from right edge */
             }
             .nav-links { 
-                gap: 0px; /* No gap between items */
+                gap: 6px; /* Small fixed gap between items */
                 width: auto;
-                flex: 1; /* Take available space */
-                justify-content: space-between; /* Spread items evenly */
-                overflow-x: hidden; 
+                flex: 1; 
+                justify-content: flex-start; /* Items stay together, not spread out */
+                overflow-x: auto; 
             }
             .nav-link { 
-                padding: 0; /* Remove side padding to tighten */
-                font-size: 0.9rem; /* Keep readable size */
+                padding: 0 2px; /* Minimal padding for text */
+                font-size: 0.9rem; 
+                flex-shrink: 0;
             }
             #lang-button {
                 font-size: 0.75rem;
-                padding: 2px 6px;
-                margin-inline-start: 12px !important; /* Force gap between nav and button */
+                padding: 2px 8px;
+                margin-inline-start: auto !important; /* Pushes button to the end but respects container padding */
                 flex-shrink: 0;
                 margin-left: 0; 
             }
@@ -69,9 +70,9 @@
             overflow: hidden; 
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); 
             position: relative; 
-            touch-action: none; 
             user-select: none;
             transform: translateZ(0);
+            /* Removed touch-action: none to allow scrolling on mobile */
         }
         
         .bingo-card.has-bg { cursor: move; }
