--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Privacy Policy | Print My Bingo</title>
+<meta name="description" content="Privacy policy for Print My Bingo.">
+<link rel="canonical" href="https://printmybingo.com/privacy.html">
+<script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-50 p-6">
+<h1 class="text-3xl font-bold text-blue-700 mb-6">Privacy Policy</h1>
+<p>We do not require registration and do not collect personal information to generate bingo cards.</p>
+<p>Email: havivontm@gmail.com</p>
+</body>
+</html>
