--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bingo Ideas & Guides | Print My Bingo</title>
+<meta name="description" content="Classroom bingo ideas, party games, and fundraising guides.">
+<link rel="canonical" href="https://printmybingo.com/blog.html">
+<script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-50 p-6">
+<h1 class="text-3xl font-bold text-blue-700 mb-6">Bingo Ideas & Guides</h1>
+<h2 class="text-xl font-bold">Classroom Bingo</h2>
+<p>Use bingo for vocabulary, math practice, and review activities.</p>
+<h2 class="text-xl font-bold mt-6">Fundraising Bingo Night</h2>
+<p>Organize an easy fundraising event with printable bingo cards.</p>
+</body>
+</html>
 
