--- a/blog.html
+++ b/blog.html
@@ -1,19 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bingo Ideas & Guides | Print My Bingo</title>
-<meta name="description" content="Classroom bingo ideas, party games, and fundraising guides.">
-<link rel="canonical" href="https://printmybingo.com/blog.html">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.tailwindcss.com"></script>
+<link rel="canonical" href="https://printmybingo.com/blog.html">
+<meta name="robots" content="index,follow">
+<title>Bingo Blog & Guides</title>
+<meta name="description" content="Bingo guides, classroom activities, party themes, and printing tips.">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Blog",
+  "name": "Print My Bingo Blog",
+  "url": "https://printmybingo.com/blog.html"
+}
+</script>
 </head>
-<body class="bg-gray-50 p-6">
-<h1 class="text-3xl font-bold text-blue-700 mb-6">Bingo Ideas & Guides</h1>
-<h2 class="text-xl font-bold">Classroom Bingo</h2>
-<p>Use bingo for vocabulary, math practice, and review activities.</p>
-<h2 class="text-xl font-bold mt-6">Fundraising Bingo Night</h2>
-<p>Organize an easy fundraising event with printable bingo cards.</p>
+<body class="bg-gray-50 text-gray-800">
+<header class="bg-white border-b">
+  <div class="max-w-6xl mx-auto p-4 flex items-center justify-between">
+    <a href="/" class="font-bold text-blue-700">← Print My Bingo</a>
+    <nav class="text-sm flex gap-4">
+      <a class="underline" href="/blog.html">Blog</a>
+      <a class="underline" href="/privacy.html">Privacy</a>
+      <a class="underline" href="/terms.html">Terms</a>
+      <a class="underline" href="/about.html">About</a>
+    </nav>
+  </div>
+</header>
+<main class="max-w-6xl mx-auto p-4">
+  <article class="bg-white border rounded-2xl p-6 md:p-10 shadow-sm">
+<h1 class="text-3xl md:text-4xl font-extrabold text-blue-800 mb-4">Bingo Blog & Guides</h1>
+
+<p class="leading-relaxed mb-6">Practical guides and ready-to-use ideas to help you run better bingo activities. These pages are designed to be SEO-friendly and useful for real visitors (teachers, parents, event organizers).</p>
+
+<div class="grid md:grid-cols-2 gap-6">
+  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/classroom-bingo.html">
+    <h2 class="text-xl font-bold mb-2">Classroom Bingo: activities for teachers</h2>
+    <p class="text-gray-700">Vocabulary, math, science, reading—plus ready-to-copy word lists and lesson tips.</p>
+  </a>
+  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/fundraising-bingo-night.html">
+    <h2 class="text-xl font-bold mb-2">Fundraising Bingo Night: step-by-step plan</h2>
+    <p class="text-gray-700">How to run a smooth event, print unique cards, set rules, and pick prizes.</p>
+  </a>
+  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/birthday-party-bingo.html">
+    <h2 class="text-xl font-bold mb-2">Birthday Party Bingo: themed ideas for kids</h2>
+    <p class="text-gray-700">Themes, word lists, and formatting tips for a fast and fun party game.</p>
+  </a>
+  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/human-bingo-icebreaker.html">
+    <h2 class="text-xl font-bold mb-2">Human Bingo: the best icebreaker</h2>
+    <p class="text-gray-700">Team-building prompts, inclusivity tips, and printable layouts.</p>
+  </a>
+  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/print-bingo-cards-pdf.html">
+    <h2 class="text-xl font-bold mb-2">How to print bingo cards as PDF (high quality)</h2>
+    <p class="text-gray-700">Printer settings, margins, and troubleshooting for clean printouts.</p>
+  </a>
+  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/bingo-rules-variations.html">
+    <h2 class="text-xl font-bold mb-2">Bingo rules & variations (quick guide)</h2>
+    <p class="text-gray-700">Classic rules, patterns, speed rounds, and fairness tips.</p>
+  </a>
+</div>
+
+    <div class="mt-10 p-5 bg-blue-50 rounded-2xl">
+      <p class="font-semibold text-blue-900 mb-2">Generate cards now</p>
+      <p class="text-blue-900/90">Open the generator, choose Numbers or Words, and print or save as PDF.</p>
+      <a class="inline-block mt-4 bg-blue-600 text-white px-5 py-3 rounded-xl font-bold" href="/">Open Generator</a>
+    </div>
+  </article>
+</main>
+<footer class="text-center text-sm text-gray-500 py-10">
+  © 2026 Print My Bingo • <a class="underline" href="/sitemap.xml">Sitemap</a>
+</footer>
 </body>
 </html>
-
