--- a/privacy.html
+++ b/privacy.html
@@ -1,16 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Privacy Policy | Print My Bingo</title>
-<meta name="description" content="Privacy policy for Print My Bingo.">
-<link rel="canonical" href="https://printmybingo.com/privacy.html">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.tailwindcss.com"></script>
+<link rel="canonical" href="https://printmybingo.com/privacy.html">
+<meta name="robots" content="index,follow">
+<title>Privacy Policy</title>
+<meta name="description" content="Privacy policy for Print My Bingo.">
 </head>
-<body class="bg-gray-50 p-6">
-<h1 class="text-3xl font-bold text-blue-700 mb-6">Privacy Policy</h1>
-<p>We do not require registration and do not collect personal information to generate bingo cards.</p>
-<p>Email: havivontm@gmail.com</p>
+<body class="bg-gray-50 text-gray-800">
+<header class="bg-white border-b">
+  <div class="max-w-6xl mx-auto p-4 flex items-center justify-between">
+    <a href="/" class="font-bold text-blue-700">← Print My Bingo</a>
+    <nav class="text-sm flex gap-4">
+      <a class="underline" href="/blog.html">Blog</a>
+      <a class="underline" href="/privacy.html">Privacy</a>
+      <a class="underline" href="/terms.html">Terms</a>
+      <a class="underline" href="/about.html">About</a>
+    </nav>
+  </div>
+</header>
+<main class="max-w-6xl mx-auto p-4">
+  <article class="bg-white border rounded-2xl p-6 md:p-10 shadow-sm">
+<h1 class="text-3xl md:text-4xl font-extrabold text-blue-800 mb-4">Privacy Policy</h1>
+
+<p class="leading-relaxed">This Privacy Policy explains how <strong>Print My Bingo</strong> (“we”, “us”) handles information when you use our bingo card generator.</p>
+
+<h2 class="text-xl font-bold mt-8 mb-2">1) No account required</h2>
+<p class="leading-relaxed">You can generate printable bingo cards without creating an account or submitting personal details.</p>
+
+<h2 class="text-xl font-bold mt-8 mb-2">2) Local storage (saved settings)</h2>
+<p class="leading-relaxed">To improve usability, the site may store settings (board size, theme options, word list) in your browser’s local storage. This remains on your device unless you clear your browser data.</p>
+
+<h2 class="text-xl font-bold mt-8 mb-2">3) Cookies and analytics</h2>
+<p class="leading-relaxed">We may use cookies or similar technologies to measure traffic and improve performance. Analytics typically reports aggregated metrics (page views, browser type) rather than directly identifying you.</p>
+
+<h2 class="text-xl font-bold mt-8 mb-2">4) Advertising (Google AdSense)</h2>
+<p class="leading-relaxed">We may show ads using Google AdSense or similar services. Advertising partners may use cookies to personalize ads and measure performance. You can manage ad personalization in your Google account settings.</p>
+
+<h2 class="text-xl font-bold mt-8 mb-2">5) Contact</h2>
+<p class="leading-relaxed">Questions? Email us at <a class="text-blue-700 underline" href="mailto:havivontm@gmail.com">havivontm@gmail.com</a>.</p>
+
+<p class="text-sm text-gray-500 mt-8">Last updated: 2026-02-04</p>
+
+    <div class="mt-10 p-5 bg-blue-50 rounded-2xl">
+      <p class="font-semibold text-blue-900 mb-2">Generate cards now</p>
+      <p class="text-blue-900/90">Open the generator, choose Numbers or Words, and print or save as PDF.</p>
+      <a class="inline-block mt-4 bg-blue-600 text-white px-5 py-3 rounded-xl font-bold" href="/">Open Generator</a>
+    </div>
+  </article>
+</main>
+<footer class="text-center text-sm text-gray-500 py-10">
+  © 2026 Print My Bingo • <a class="underline" href="/sitemap.xml">Sitemap</a>
+</footer>
 </body>
 </html>
