--- a/index.html
+++ b/index.html
@@ -1098,14 +1098,29 @@
         };
     </script>
 
-    <!-- Lightweight SEO content block (kept short to avoid clutter) -->
-    <div class="max-w-4xl mx-auto mt-6 mb-2 px-4">
-      <div class="bg-white/70 border rounded-2xl p-4 text-sm text-gray-700 leading-relaxed">
-        <p class="font-semibold text-gray-900 mb-2">Learn more</p>
-        <p class="mb-2">Need ideas and templates? Visit our <a class="text-blue-700 underline" href="/blog.html">Bingo Blog</a> for classroom activities, party themes, fundraising bingo night tips, and “Human Bingo” icebreakers.</p>
-        <p class="mb-0">Read our <a class="text-blue-700 underline" href="/privacy.html">Privacy Policy</a> and <a class="text-blue-700 underline" href="/terms.html">Terms</a>.</p>
-      </div>
+    
+<!-- Lightweight SEO content block (kept short to avoid clutter) -->
+<style>
+  .pmbl-he{display:none}
+  html[lang="he"] .pmbl-he{display:block}
+  html[lang="he"] .pmbl-en{display:none}
+  html[dir="rtl"] .pmbl-he{display:block}
+  html[dir="rtl"] .pmbl-en{display:none}
+</style>
+<div class="max-w-4xl mx-auto mt-6 mb-2 px-4">
+  <div class="bg-white/70 border rounded-2xl p-4 text-sm text-gray-700 leading-relaxed">
+    <div class="pmbl-en">
+      <p class="font-semibold text-gray-900 mb-2">Learn more</p>
+      <p class="mb-2">Need ideas and templates? Visit our <a class="text-blue-700 underline" href="/blog.html">Bingo Blog</a> for classroom activities, party themes, fundraising tips, and “Human Bingo” icebreakers.</p>
+      <p class="mb-0">Read our <a class="text-blue-700 underline" href="/privacy.html">Privacy Policy</a>, <a class="text-blue-700 underline" href="/terms.html">Terms</a>, and <a class="text-blue-700 underline" href="/about.html">About</a>.</p>
     </div>
+    <div class="pmbl-he">
+      <p class="font-semibold text-gray-900 mb-2">מידע נוסף</p>
+      <p class="mb-2">רעיונות ותבניות? היכנס ל־<a class="text-blue-700 underline" href="/blog.html">בלוג הבינגו</a> עם פעילויות לכיתה, ערכות נושא למסיבות, טיפים להתרמה ו״בינגו אנושי״ לאירועי חברה.</p>
+      <p class="mb-0">קרא/י את <a class="text-blue-700 underline" href="/privacy.html">מדיניות הפרטיות</a>, <a class="text-blue-700 underline" href="/terms.html">תנאי השימוש</a>, ו־<a class="text-blue-700 underline" href="/about.html">אודות</a>.</p>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
