--- a/about.html
+++ b/about.html
@@ -3,53 +3,95 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://cdn.tailwindcss.com"></script>
-<link rel="canonical" href="https://printmybingo.com/about.html">
-<meta name="robots" content="index,follow">
-<title>About Print My Bingo</title>
+<title>About | Print My Bingo</title>
 <meta name="description" content="About the Print My Bingo project.">
+<meta name="robots" content="index,follow">
+<link rel="canonical" href="https://printmybingo.com/about.html">
+<script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 <header class="bg-white border-b">
   <div class="max-w-6xl mx-auto p-4 flex items-center justify-between">
-    <a href="/" class="font-bold text-blue-700">← Print My Bingo</a>
-    <nav class="text-sm flex gap-4">
-      <a class="underline" href="/blog.html">Blog</a>
-      <a class="underline" href="/privacy.html">Privacy</a>
-      <a class="underline" href="/terms.html">Terms</a>
-      <a class="underline" href="/about.html">About</a>
-    </nav>
+    <a href="/" class="font-bold text-blue-700" id="backLink">← Print My Bingo</a>
+    <div class="flex items-center gap-4 text-sm">
+      <nav class="hidden sm:flex gap-4">
+        <a class="underline" href="/blog.html" data-i18n="navBlog">Blog</a>
+        <a class="underline" href="/privacy.html" data-i18n="navPrivacy">Privacy</a>
+        <a class="underline" href="/terms.html" data-i18n="navTerms">Terms</a>
+        <a class="underline" href="/about.html" data-i18n="navAbout">About</a>
+      </nav>
+      <button id="langBtn" class="px-3 py-1 border rounded-lg bg-white">עברית</button>
+    </div>
   </div>
 </header>
+
 <main class="max-w-6xl mx-auto p-4">
   <article class="bg-white border rounded-2xl p-6 md:p-10 shadow-sm">
-<h1 class="text-3xl md:text-4xl font-extrabold text-blue-800 mb-4">About Print My Bingo</h1>
-
-<p class="leading-relaxed"><strong>Print My Bingo</strong> is built to do one thing really well: create printable bingo cards fast—without signup, without downloads, and without clutter.</p>
-
-<h2 class="text-xl font-bold mt-8 mb-2">Who uses it?</h2>
-<ul class="list-disc list-inside space-y-2 leading-relaxed">
-  <li><strong>Teachers</strong> for vocabulary, math, review games, and classroom engagement.</li>
-  <li><strong>Parents</strong> for birthday parties, holidays, and rainy-day activities.</li>
-  <li><strong>Event organizers</strong> for fundraising bingo nights and community events.</li>
-  <li><strong>Teams</strong> for “Human Bingo” icebreakers at workshops and offsites.</li>
-</ul>
-
-<h2 class="text-xl font-bold mt-8 mb-2">Our focus</h2>
-<p class="leading-relaxed">We focus on clear printing, fast generation, and enough customization to match your event theme—without making the generator complicated.</p>
-
-<h2 class="text-xl font-bold mt-8 mb-2">Contact</h2>
-<p class="leading-relaxed">Email: <a class="text-blue-700 underline" href="mailto:havivontm@gmail.com">havivontm@gmail.com</a></p>
-
+    <h1 class="text-3xl md:text-4xl font-extrabold text-blue-800 mb-4" data-i18n="h1">About | Print My Bingo</h1>
+    <div id="content" class="prose max-w-none prose-p:leading-relaxed prose-li:leading-relaxed prose-headings:text-gray-900"></div>
     <div class="mt-10 p-5 bg-blue-50 rounded-2xl">
-      <p class="font-semibold text-blue-900 mb-2">Generate cards now</p>
-      <p class="text-blue-900/90">Open the generator, choose Numbers or Words, and print or save as PDF.</p>
-      <a class="inline-block mt-4 bg-blue-600 text-white px-5 py-3 rounded-xl font-bold" href="/">Open Generator</a>
+      <p class="font-semibold text-blue-900 mb-2" data-i18n="ctaT">Generate cards now</p>
+      <p class="text-blue-900/90" data-i18n="ctaB">Open the generator, choose Numbers or Words, and print or save as PDF.</p>
+      <a class="inline-block mt-4 bg-blue-600 text-white px-5 py-3 rounded-xl font-bold" href="/" data-i18n="ctaBtn">Open Generator</a>
     </div>
   </article>
 </main>
+
 <footer class="text-center text-sm text-gray-500 py-10">
   © 2026 Print My Bingo • <a class="underline" href="/sitemap.xml">Sitemap</a>
 </footer>
+
+<script>
+const T = {
+  en: {
+    navBlog: "Blog", navPrivacy: "Privacy", navTerms: "Terms", navAbout: "About",
+    h1: "About | Print My Bingo",
+    ctaT: "Generate cards now",
+    ctaB: "Open the generator, choose Numbers or Words, and print or save as PDF.",
+    ctaBtn: "Open Generator",
+    back: "← Print My Bingo",
+    body: `<p><strong>Print My Bingo</strong> is built to do one thing really well: create printable bingo cards fast—without signup, without downloads, and without clutter.</p>
+<h2>Who is it for?</h2><ul><li><strong>Teachers</strong> – vocabulary, math, and review games.</li><li><strong>Parents</strong> – parties, holidays, and at-home activities.</li><li><strong>Event organizers</strong> – fundraising nights and community events.</li><li><strong>Teams</strong> – “Human Bingo” icebreakers for workshops and onboarding.</li></ul>
+<h2>Contact</h2><p>Email: <a class="text-blue-700 underline" href="mailto:havivontm@gmail.com">havivontm@gmail.com</a></p>`
+  },
+  he: {
+    navBlog: "בלוג", navPrivacy: "פרטיות", navTerms: "תנאי שימוש", navAbout: "אודות",
+    h1: "אודות | Print My Bingo",
+    ctaT: "צור/י כרטיסים עכשיו",
+    ctaB: "חזור/י למחולל, בחר/י מספרים או מילים, והדפס/י או שמור/י ל‑PDF.",
+    ctaBtn: "פתח את המחולל",
+    back: "← Print My Bingo",
+    body: `<p><strong>Print My Bingo</strong> נבנה כדי לעשות דבר אחד מצוין: ליצור כרטיסי בינגו להדפסה במהירות — בלי הרשמה, בלי הורדות ובלי עומס.</p>
+<h2>למי זה מתאים?</h2><ul><li><strong>מורים</strong> – אוצר מילים, מתמטיקה, משחקי חזרה.</li><li><strong>הורים</strong> – מסיבות, חגים ופעילויות בבית.</li><li><strong>מפיקי אירועים</strong> – ערבי התרמה ואירועי קהילה.</li><li><strong>צוותים</strong> – ״בינגו אנושי״ לאייסברייקר באונבורדינג וסדנאות.</li></ul>
+<h2>יצירת קשר</h2><p>אימייל: <a class="text-blue-700 underline" href="mailto:havivontm@gmail.com">havivontm@gmail.com</a></p>`
+  }
+};
+
+let lang = (navigator.language || "").toLowerCase().startsWith("he") ? "he" : "en";
+
+function apply() {
+  document.documentElement.lang = lang;
+  document.documentElement.dir = lang === "he" ? "rtl" : "ltr";
+  document.getElementById("langBtn").textContent = lang === "he" ? "English" : "עברית";
+  document.getElementById("backLink").textContent = T[lang].back;
+  document.getElementById("content").innerHTML = T[lang].body;
+
+  for (const el of document.querySelectorAll("[data-i18n]")) {
+    const k = el.getAttribute("data-i18n");
+    if (T[lang][k]) el.textContent = T[lang][k];
+  }
+
+  document.title = (lang === "he") ? "אודות | Print My Bingo" : "About | Print My Bingo";
+  const metaDesc = document.querySelector('meta[name="description"]');
+  if (metaDesc) metaDesc.setAttribute("content", (lang === "he") ? "אודות פרויקט Print My Bingo." : "About the Print My Bingo project.");
+}
+
+document.getElementById("langBtn").addEventListener("click", () => {
+  lang = (lang === "he") ? "en" : "he";
+  apply();
+});
+
+apply();
+</script>
 </body>
 </html>
